--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<webappDirectory>/dyna-test</webappDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
