--- a/pom.xml
+++ b/pom.xml
@@ -79,14 +79,14 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-<!--			<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.0</version>
 				<configuration>
 					<webappDirectory>/dyna-test</webappDirectory>
 				</configuration>
-			</plugin>-->
+			</plugin>
 		</plugins>
 	</build>
 
